@@ -175,8 +175,8 @@ cache_magic_matchlet_compare_to_data (XdgMimeCache *cache,
 	{
 	  for (j = 0; j < data_length; j++)
 	    {
-	      if ((cache->buffer[data_offset + j] & cache->buffer[mask_offset + j]) !=
-		  ((((unsigned char *) data)[j + i]) & cache->buffer[mask_offset + j]))
+	      if ((((unsigned char *)cache->buffer)[data_offset + j] & ((unsigned char *)cache->buffer)[mask_offset + j]) !=
+		  ((((unsigned char *) data)[j + i]) & ((unsigned char *)cache->buffer)[mask_offset + j]))
 		{
 		  valid_matchlet = FALSE;
 		  break;
@@ -187,7 +187,7 @@ cache_magic_matchlet_compare_to_data (XdgMimeCache *cache,
 	{
 	  for (j = 0; j < data_length; j++)
 	    {
-	      if (cache->buffer[data_offset + j] != ((unsigned char *) data)[j + i])
+	      if (((unsigned char *)cache->buffer)[data_offset + j] != ((unsigned char *) data)[j + i])
 		{
 		  valid_matchlet = FALSE;
 		  break;
