@@ -1,3 +1,7 @@
+2005-10-18  Matthias Clasen  <mclasen@redhat.com>
+
+	* src/xdgmimecache.c: Make magic comparisons work correctly.
+
 Thu Jun  9 23:55:25 2005  Jonathan Blandford  <jrb@redhat.com>
 
 	* src/xdgmime.c (xdg_mime_init_from_directory): patch from
